[package]
name = "dsx"
version = "0.1.0"
authors = ["Pear0 <williamgulian@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Pear0/dsx-rs"
description = "Various data structures"

edition = "2018"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[features]
default = []

std = []
kern = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
