[package]
name = "dsx"
version = "0.1.0"
authors = ["Pear0 <williamgulian@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Pear0/dsx-rs"
description = "Various data structures"

edition = "2018"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[features]
default = ["std"]

std = []
kern = []
loom_tests = ["std", "loom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = { git = "https://github.com/jonhoo/crossbeam", branch = "loom", version = "0.8.0", default-features = false, features = [] }
downcast-rs = { version = "1.2.0", default-features = false }
loom = { version = "0.4", features = ["checkpoint"], optional = true }

[dev-dependencies]
# Pull crossbeam from jonhoo's
crossbeam = { git = "https://github.com/jonhoo/crossbeam", branch = "loom", version = "0.8.0" }


[profile.test]
panic = "unwind"
